--- a/requirements.txt
+++ b/requirements.txt
@@ -3,16 +3,21 @@ Automat==0.6.0
 certifi==2017.7.27.1
 chardet==3.0.4
 constantly==15.1.0
+cx-Freeze==5.1.1
+esky==0.9.9
 gevent==1.2.2
 greenlet==0.4.12
 grequests==0.3.0
 hyperlink==17.3.1
 idna==2.6
 incremental==17.5.0
+numpy==1.13.3
 olefile==0.44
 Pillow==4.3.0
+PyQt5==5.9.1
 QScintilla==2.10.1
 requests==2.18.4
+scipy==1.0.0
 sip==4.19.4
 six==1.11.0
 urllib3==1.22
